@@ -33,7 +33,7 @@
 /*
  * Portions Copyright (c) 2005 Gunnar Ritter, Freiburg i. Br., Germany
  *
- * Sccsid @(#)dpost.c	1.146 (gritter) 4/17/06
+ * Sccsid @(#)dpost.c	1.147 (gritter) 4/25/06
  */
 
 /*
